2008-04-25  Satoshi Nakagawa <artension@gmail.com>

	Fixed a crash, dropped symlinks on the member list should be ignored for DCC send.

2008-04-17  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, marked scrollers were visible on the top-left corner of log views when initialized.

2008-04-17  Satoshi Nakagawa <artension@gmail.com>

	Changed the format of text messages for Growl notifications to "<nick> msg".

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the scrollers of log views won't be rendered correctly when initialized with not enough frame.

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Improved the last fix.

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, "MODE +a user" should be considered as setting an user mask.

2008-04-15  Satoshi Nakagawa <artension@gmail.com>

	Added Kick, Ban and Kick & Ban in the context menu on the member list.

==== LimeChat 0.17.2 ====

2008-04-15  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, my address was forgotten after reconnecting.

2008-04-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in DccManager#tableView_objectValueForTableColumn_row.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the menu title of close current panel.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Changed Cmd-w to close current panel without confirmation when the panel is a talk.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Changed Cmd-w to close current panel with confirmation when the main window is foreground.
	Changed Cmd-Shift-w to close current panel without confirmation.

==== LimeChat 0.17.1 ====

2008-03-26  Satoshi Nakagawa <artension@gmail.com>

	Assigned Cmd-w to close the window, and Cmd-Shift-w to close the current channel.

2008-03-25  Satoshi Nakagawa <artension@gmail.com>

	Changed /part without parameters to close the current talk.